--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,8 @@
     font-weight: weight;
     font-style: normal;
   }
-  .body{
-    background:#ffff;
+  body{
+    background-color:#FDFFF5;
+    height: 100vh;
   }
   
