--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,12 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Prata&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Prata&display=swap');
 @import "tailwindcss";
-.outfit-{
-    font-family: "Outfit", serif;
-    font-optical-sizing: auto;
-    font-weight: weight;
-    font-style: normal;
-  }
   body{
     background-color:#FDFFF5;
     height: 100vh;
   }
-  
+  .prata-regular {
+    font-family: "Prata", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
